# evm-sim

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  trace_types.rs
inspector/: Cargo.toml
inspector/src/: lib.rs
py-bindings/: Cargo.toml
py-bindings/src/: lib.rs  types.rs
python-bindings/: Cargo.toml  pyproject.toml
python-bindings/src/: lib.rs
sim/: Cargo.toml
sim/src/: evm.rs  lib.rs  main.rs  simulator.rs  utils.rs
vm/: Cargo.toml
vm/src/: lib.rs
