[workspace]
members = ["common", "vm"]

[workspace.dependencies]
revm = "14.0.3" # revm - Rust Ethereum Virtual Machine 
anyhow = "1.0.89" # Flexible concrete Error type built on std::error::Error
serde_json = "1.0.128" # A JSON serialization file format
serde = { version = "1.0.210", features = [
    "derive",
] } # A generic serialization/deserialization framework
tiny-keccak = "2.0.2"          # An implementation of Keccak derived functions.