[workspace]
resolver = "2"
members = ["sim"]


[workspace.dependencies]
foundry-evm = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-e649e62f125244a3ef116be25dfdc81a2afbaf2a" }
alloy = { version = "0.5.4", features = ["full"] }
tokio = "1.41.1"                         # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applica…