[workspace]
resolver = "2"
members = ["py-bindings", "sim"]


[workspace.dependencies]
foundry-evm = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-e649e62f125244a3ef116be25dfdc81a2afbaf2a", features = [
] }
alloy = { version = "0.5.4", features = ["full"] }
tokio = "1.41.1" # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applica…
anyhow = "1.0.95" # Flexible concrete Error type built on std::error::Error
pyo3 = "0.23.3" # Bindings to Python interpreter
serde = "1.0.217" # A generic serialization/deserialization framework
hex = "0.4.3"                        # Encoding and decoding data into/from hexadecimal representation.
